// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobList /> when it has no any data should be same as snapshot 1`] = `
<JobList
  jobIds={Array []}
  loadIfNeeded={[Function]}
>
  <div
    className="empty"
  >
    No data
  </div>
</JobList>
`;

exports[`<JobList /> when it has some jobs data should be same as snapshot 1`] = `
<JobList
  jobIds={
    Array [
      1,
      2,
      3,
    ]
  }
  loadIfNeeded={[Function]}
>
  <div
    className="wrapper"
  >
    <Job
      id={1}
    />
    <Job
      id={2}
    />
    <Job
      id={3}
    />
  </div>
</JobList>
`;
